<resources>
    <string name="app_name">Ultima</string>
    <string name="dialog_desc">Professional, no just professional.</string>
    <string name="accessibility_service_description">Ultima manual assist</string>
    <string name="not_auxiliary">Please turn on the accessibility mode of Ultima</string>
    <string name="not_windows">Sorry, this feature requires floating window permissions</string>
    <string name="menu_user">Account Info</string>
    <string name="menu_home">Console</string>
    <string name="menu_soft">App Manage</string>
    <string name="menu_signer">Signature Manage</string>
    <string name="menu_log">Update Logs</string>
    <string name="menu_auxiliary">Activity Record</string>
    <string name="menu_a">App Store</string>
    <string name="menu_about">About</string>
    <string name="dialog_tips">Tips</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="qq_login">Tencent QQ</string>
    <string name="activity_debug">Debug Activity</string>
    <string name="login_error">Login error:%s</string>
    <string name="login_success">Login successful:%s</string>
    <string name="status_empty">No data</string>
    <string name="delete_task">Whether to delete this task: </string>
    <string name="apps_packagename">PackageName</string>
    <string name="apps_ver">Version</string>
    <string name="apps_size">File size</string>
    <string name="apps_jiagu">Shell (Stub/Jiagu)</string>
    <string name="not_more_data">No more data</string>
    <string name="status_complete">The task has been processed</string>
    <string name="status_fail">Task processing failed</string>
    <string name="status_wait">Task waiting.....</string>
    <string name="status_processing">Task processing.....</string>
    <string name="task_time_second">%d Seconds before</string>
    <string name="task_time_minute">%d Minutes before</string>
    <string name="task_time_hour">%d Hours before</string>
    <string name="task_time_day">%d Day before</string>
    <string name="next">Next</string>
    <string name="activity_selete_title">Choose an App</string>
    <string name="activity_selete_soft">Installed</string>
    <string name="activity_selete_file">Sdcard</string>
    <string name="process_status">Processing status</string>
    <string name="process_event">Handling events</string>
    <string name="exception">An exception occurs:\n%s</string>
    <string name="dow_res">Downloading resource files</string>
    <string name="res_dow_sussecc">Resource download completed</string>
    <string name="src_faill">The original file is lost,so cannot be packed</string>
    <string name="wait_handle">Waiting for opening</string>
    <string name="install">Install</string>
    <string name="signer_fall">The signature of installed app and the not installed app are inconsistent. You have to uninstall the installed app first.Do you want to uninstall the installed app?</string>
    <string name="upload_max">The file size is too large, it is temporarily not supported. The maximum is only 200M</string>
    <string name="not_handle">Please check one functions at least.</string>
    <string name="Account">Account</string>
    <string name="other">Other</string>
    <string name="function">Function</string>
    <string name="dialog_selete">Whether to choose:</string>
    <string name="dialog_have_selete">Yes</string>
    <string name="google">Google</string>
    <string name="add_task">Add APP by clicking + button below</string>
    <string name="version">Version</string>
    <string name="logout">Whether to logout?</string>
    <string name="archive_succecc">app output sdcard path:</string>
    <string name="code_verify">Verify</string>
    <string name="verify_info">Please enter the 16-digit activation code(giftcard) for recharge</string>
    <string name="connection_fail">Connection failure</string>
    <string name="projects">Statistics</string>
    <string name="next_level">Next level</string>
    <string name="total_apps">Total App Dialog(s)</string>
    <string name="day_task">Available tasks today</string>
    <string name="today_task">Today task</string>
    <string name="user_buy">Card recharge</string>
    <string name="card_buy">Purchase card</string>
    <string name="request_exception">Data request exception</string>
    <string name="parsing_failed">Data parsing failed</string>
    <string name="unknown">unknown</string>
    <string name="usr_count">Number of users today</string>
    <string name="soft_mode">Module:%s</string>
    <string name="soft_mode_single">Card verification</string>
    <string name="soft_mode_group">Share dialog</string>
    <string name="soft_mode_login">Login authentication dialog</string>
    <string name="menu_plugin">Plugin</string>
    <string name="copy_success">copy success</string>
    <string name="singer_alias">Alias:</string>
    <string name="singer_password">PassWord:</string>
    <string name="dialog_update_ok">Update</string>
    <string name="dialog_update_cancel">Cancel</string>
    <string name="dialog_jks_pass">PassWord</string>
    <string name="dialog_jks_alias">Alias</string>
    <string name="dialog_jks_aliaspass">Alias PassWord</string>
    <string name="rule_not">Rules are incomplete</string>
    <string name="jks_exists">Sign or key already exists</string>
    <string name="delete_fail">Delete Fail</string>
    <string name="menu_group">Exchange Group</string>
    <string name="tips_install">Installing....</string>
    <string name="tips_dow">Downloading -> %d</string>
    <string name="selete_jks_file">Select JKS file</string>
    <string name="export_success">Export succeeded:\n</string>
    <string name="selete_signer_data">Select a signature data</string>
    <string name="task_upload">Task uploading ....</string>
    <string name="menu_helper">Document</string>
    <string name="loading_data_error">Data loading failed</string>
    <string name="soft_mode_notice">Remote announcement</string>
    <string name="soft_mode_null">Nothing</string>
    <string name="soft_mode_notice_tips">Add remote announcements to the app</string>
    <string name="ic_menu_save">Save</string>
    <string name="menu_telegram">telegram</string>
    <string name="dialog_delete_soft">Whether to delete the app?\nAfter deletion, the app cannot be restored and the injected app will be crashed</string>
    <string name="dialog_selete_color">Choose the Color</string>
    <string name="handle_desc">If you use this app for the first time, please check the document.</string>
    <string name="selete_main_activity">Select entry Class/Activity</string>
    <string name="jks_pass_fail">Incorrect alias or password</string>
    <string name="soft_basic_config">Basic configuration</string>
    <string name="soft_notice_title">Notice title</string>
    <string name="soft_notice_msg">Notice content text</string>
    <string name="soft_notice_smart">Smart mode</string>
    <string name="soft_notice_smart_tips">Show the notice when the content changes, and only show once when the content does not change</string>
    <string name="soft_dialog_style">Pop-up/Dialog style</string>
    <string name="soft_dialog_anim">Pop-up/Dialog animation</string>
    <string name="soft_notice_cancelable">Can it be cancelled?</string>
    <string name="soft_text_color_config">Font color configuration</string>
    <string name="soft_title_color">Title color</string>
    <string name="soft_confirm_color">Confirm button color</string>
    <string name="soft_extra_color">Extra button color</string>
    <string name="soft_cancel_color">Cancel button color</string>
    <string name="soft_confirm_config">Confirm button configuration</string>
    <string name="soft_confirm_text">Confirm button text (Not displayed by default)</string>
    <string name="soft_action_body">Event content</string>
    <string name="soft_cancel_config">Cancel button configuration</string>
    <string name="soft_cancel_text">Cancel button text (Not displayed by default)</string>
    <string name="soft_extra_config">Additional button configuration</string>
    <string name="soft_extra_text">Extra button text (Not displayed by default)</string>
    <string name="soft_msg_color">Content text color</string>
    <string name="soft_notice_cancel_true">Cancelable</string>
    <string name="soft_notice_cancel_false">Not cancelable</string>
    <string name="soft_notice_dialog_style_toast">Toast</string>
    <string name="soft_dialog_style_native_bright">Light style dialog</string>
    <string name="soft_dialog_style_native_dark">Dark style dialog</string>
    <string name="soft_dialog_style_ios">iOS style dialog</string>
    <string name="soft_notice_event_null">Nothing</string>
    <string name="soft_notice_event_add_qq_group">Join QQ Group</string>
    <string name="soft_notice_event_add_qq">Add QQ friend</string>
    <string name="soft_notice_event_jump_url">Jump Http(s) website</string>
    <string name="soft_notice_event_exit_app">Exit App</string>
    <string name="soft_notice_event_share_msg">Share Content Text</string>
    <string name="menu_email">Email</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_export">Export</string>
    <string name="dialog_create_single_mark">Remarks</string>
    <string name="dialog_create_single_count">Count</string>
    <string name="dialog_create_single_duration">Duration</string>
    <string name="dialog_login_text">Login</string>
    <string name="dialog_pass_text">PassWord</string>
    <string name="dialog_user_text">UserName</string>
    <string name="dialog_registered_text">Register a new account</string>
    <string name="dialog_retrieve_text">forget password?</string>
    <string name="ic_menu_copy_rule">Copy Config</string>
    <string name="ic_menu_pasta_rule">Paste Config</string>
    <string name="dialog_custom_invoke_helper1">This function can automatically load custom network/local (Dex/Jar/Apk) patches or function codes to realize function expansion, etc.</string>
    <string name="dialog_custom_invoke_helper2">Call the method of the specified class</string>
    <string name="dialog_custom_invoke_helper3">Such as: com.xxx.test()</string>
    <string name="dialog_custom_invoke_helper4">Parameter Description</string>
    <string name="dialog_custom_invoke_helper5">[activity] -> current activity page object\n[context] -> current context object\n[proxy] -> Agent Activity/Server supports registration-free startup\n[assets] -> Current plug-in resource object(AssetManager Object)\n[path] -> Current plugin path(File Object)\ns[test] -> define string, value is test\ni[123] -> define int type, value is 123\nI[123] -> define Integer type, value is 123\nb[true] -> define the boolean type, the value is true\nB[true] -> define the Boolean type, the value is true\nf[1.23] -> define the float type, the value is 1.23\nF[1.23] -> Define the Float type, the value is 1.23\nd[1234567890] -> Define the double type, the value is 1234567890\nD[1234567890] -> Define the Double type, the value is 1234567890\nl[1234567890] -> Define the long type, the value is 1234567890\nL[1234567890] -> Define Long type, the value is 1234567890</string>
    <string name="dialog_custom_invoke_helper6">For example, call the test method under the com.xxx class (support static non-static methods) The method parameter is (Activity activity, String str) Rule: com.xxx.test([activity],s[Test]) activity is the current active page, str is Test string type</string>
    <string name="signer_v2_tips">V2 signature is a full-file signature scheme, which can significantly improve the signature verification speed of the system when installing applications, and it ensures the integrity of the APK and has higher security</string>
    <string name="signer_mode">Signing Mode</string>
    <string name="signer_key">Signing Key</string>
</resources>