<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/Account">
            <menu>
                <item
                    android:id="@+id/nav_user"
                    android:icon="@drawable/ic_menu_user"
                    android:title="@string/menu_user" />
            </menu>
        </item>
        <item android:title="@string/function">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_plugin"
                    android:visible="false"
                    android:icon="@drawable/ic_plugin"
                    android:title="@string/menu_plugin" />
                <item
                    android:id="@+id/nav_signer"
                    android:icon="@drawable/ic_meun_signer"
                    android:title="@string/menu_signer" />
                <item
                    android:id="@+id/nav_soft"
                    android:icon="@drawable/ic_menu_soft"
                    android:title="@string/menu_soft" />
                <item
                    android:id="@+id/nav_log"
                    android:icon="@drawable/ic_menu_log"
                    android:title="@string/menu_log" />
            </menu>
        </item>
        <item android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/menu_about" />
            </menu>
        </item>
    </group>
</menu>
