<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Armadillo
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_baseline_import_export_24"
        android:orderInCategory="100"
        android:title="@string/menu_sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_baseline_delete_sweep_24"
        android:orderInCategory="100"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_baseline_unarchive_24"
        android:orderInCategory="100"
        android:title="@string/menu_export"
        app:showAsAction="ifRoom" />
</menu>